# tts

./: PROGRESS.md  pyproject.toml
src/: application.py  main.py
src/model/: file_reader.py  model.py
src/ui/: gui.py  main_ui.py  testui.py  virtual_scroll_bar.py
